feat: category listing feature
