# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\Auth\LoginController;
 use App\Http\Controllers\Api\Auth\LogoutController;
+use App\Http\Controllers\Api\CategoryController;
 use App\Http\Middleware\JwtMiddleware;
 use Illuminate\Support\Facades\Route;
 
@@ -9,5 +10,9 @@ Route::prefix('v1')->group(function () {
     Route::prefix('auth')->group(function () {
         Route::post('/login', LoginController::class);
         Route::post('/logout', LogoutController::class)->middleware(JwtMiddleware::class);
+    });
+
+    Route::middleware(JwtMiddleware::class)->group(function () {
+        Route::apiResource('categories', CategoryController::class);
     });
 });
